--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,8 @@ body {
 
 .apresentacao__imagem {
     width: 50%;
+    border: 4px solid var(--cor-tericiaria) ;
+    border-radius: 8px;
 }
 
 
